fix(bootstrap4-theme): remove wrapping from text

--- a/packages/bootstrap4-theme/src/scss/extends/_buttons.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_buttons.scss
@@ -2,6 +2,7 @@
 .btn {
   text-decoration: $uds-component-button-text-decoration;
   font-weight: $uds-component-button-font-weight;
+  white-space: nowrap;
   &.btn-md {
     font-size: $uds-component-button-medium-font-size;
     padding: $uds-component-button-padding-y-medium
